# Black-Dashboard-Django

./: .breakpoints  pyproject.toml
apps/home/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/home/migrations/: 0001_initial.py  0002_alter_eventlist_costtime.py  0003_auto_20211008_0521.py  0003_dailyfreetime_busytime.py  0004_alter_dailyfreetime_busytime.py  0005_alter_dailyfreetime_busytime.py
apps/home/static/js/: index.js
apps/static/assets/css/: black-dashboard.css  black-dashboard.css.map
apps/static/assets/demo/: demo.js
apps/static/assets/js/: index.js
apps/static/assets/scss/black-dashboard/bootstrap/: _card.scss
apps/static/assets/scss/black-dashboard/custom/cards/: _card-chart.scss
apps/templates/accounts/: register.html
apps/templates/home/: index.html
apps/templates/includes/: fixed-plugin.html  footer.html  navigation.html  scripts.html  sidebar.html
apps/templates/layouts/: base-rtl.html  base.html
core/: settings.py
